--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,6 +51,9 @@
   .blur-effect-theme {
     @apply bg-white/50 bg-clip-padding backdrop-filter backdrop-blur bg-opacity-50 opacity-100 z-[100] shadow-sm shadow-slate-100 transition-all duration-300;
   }
+  .blur-effect-dark-theme {
+    @apply bg-black/50 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-50 opacity-100 z-[100] shadow-sm shadow-slate-100 transition-all duration-300;
+  }
 
   /* Icon Stles */
   .icon-style {
